fix navbar collapse

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -65,9 +65,9 @@ body{
 	border-radius: 2.5rem;
 }
 
-.navbar{
-	height: 3.5rem;
-}
+/*.navbar{*/
+	/*height: 3.5rem;*/
+/*}*/
 
 .nav-item a{
 	transition: 0.8s;
